# pomodoro

./: .pre-commit-config.yaml  pyproject.toml
src/: pomodoro.py
src/pomodoro/: pomodoro.py
